--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yearn-veTok-gauge-voting",
+  "name": "sharedTools-veTok-gauge-voting",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,7 @@
     "async": "^3.2.0",
     "bignumber.js": "^9.0.1",
     "date-fns": "^2.21.1",
+    "ethers": "^5.4.7",
     "flux": "^4.0.1",
     "moment": "^2.29.1",
     "next": "^10.0.0",
@@ -34,7 +35,10 @@
     "query-string": "^7.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-gauge-chart": "^0.4.0",
     "recharts": "^2.0.3",
+    "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.6",
     "web3": "^1.3.3",
     "web3-batch-call": "^1.0.12"
   }
