--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "async": "^3.2.1",
     "bignumber.js": "^9.0.1",
     "date-fns": "^2.25.0",
-    "ethers": "^5.5.1",
+    "ethcall": "^4.3.2",
+    "ethers": "^5.5.3",
     "flux": "^4.0.2",
     "moment": "^2.29.1",
     "next": "^12.0.8",
