--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "export": "next export",
     "build2": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@danah/react-hook-scrollto": "^1.0.10",
@@ -32,6 +33,7 @@
     "moment": "^2.29.1",
     "next": "^12.0.8",
     "node-fetch": "^2.6.5",
+    "prettier": "^2.5.1",
     "query-string": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -43,7 +45,24 @@
     "web3-batch-call": "^1.0.12"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "electron": "^14.2.0",
-    "got": "^11.8.2"
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "got": "^11.8.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm precommit"
+    }
   }
 }
