updated lint-staged order

--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
+      "eslint --fix",
+      "prettier --write"
     ]
   }
 }
