--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "export": "next export",
     "build2": "next build && next export",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@danah/react-hook-scrollto": "^1.0.10",
@@ -33,8 +35,8 @@
     "next": "^12.0.8",
     "node-fetch": "^2.6.5",
     "query-string": "^7.0.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-gauge-chart": "^0.4.0",
     "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
@@ -44,6 +46,16 @@
   },
   "devDependencies": {
     "electron": "^14.2.0",
-    "got": "^11.8.2"
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "got": "^11.8.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.3",
+    "prettier": "^2.5.1"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
