--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ethcall": "^4.3.2",
     "ethers": "^5.5.3",
     "flux": "^4.0.2",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
     "moment": "^2.29.1",
     "next": "^12.1.0",
     "node-fetch": "^2.6.5",
