--- a/package.json
+++ b/package.json
@@ -19,17 +19,15 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
-    "@web3-react/core": "^6.1.1",
-    "@web3-react/fortmatic-connector": "^6.1.6",
+    "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/network-connector": "^6.1.3",
-    "@web3-react/walletconnect-connector": "^6.2.4",
-    "@web3-react/walletlink-connector": "^6.2.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
+    "@web3-react/walletlink-connector": "^6.2.13",
     "async": "^3.2.1",
     "bignumber.js": "^9.0.1",
     "date-fns": "^2.25.0",
-    "ethcall": "^4.3.2",
-    "ethers": "^5.5.3",
+    "ethcall": "^4.3.5",
+    "ethers": "^5.6.1",
     "flux": "^4.0.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.2.31",
@@ -42,9 +40,7 @@
     "react-gauge-chart": "^0.4.0",
     "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
-    "sweetalert2": "^11.1.9",
-    "web3": "^1.6.0",
-    "web3-batch-call": "^1.0.12"
+    "sweetalert2": "^11.1.9"
   },
   "devDependencies": {
     "electron": "^14.2.0",
